                and Perf-O-Meter
    * ps.perf: Support Windows with new plugin "psperf.bat". wmicchecks.bat
               is obsolete now.
    * Special Agent vSphere: support ESX 4.1 (thanks to Mirko Witt)
    * esx_vsphere_object: make check state configurable
    * mk_logwatch: support continuation lines with 'A'. Please refer to docu.
    * mk_oracle: Added plugin for solaris

    Notifications:
    * notify.py: Matching service level: Use the hosts service level if a
                 service has no service level set

    Multisite:
    * User accounts can now be locked after a specified amount of auth
      failures (lock_on_logon_failures can be set to a number of tries)
    * FIX: better error message in case of exception in SNMP handling
    * Column Perf-O-Meter is now sortable: it sorts after the *first*
      performance value. This might not always be the one you like, but
      its far better than nothing.
    * logwatch: Logwatch icon no longer uses notes_url
    * check_mk-if.pnp: fixed bug with pnp template on esx hosts without perfdata
    * Fix: Inventory screen: Now shows custom checks
    * Inventory screen: Host inventory also displays its clustered services
    * Rules: Renamed "Ignored services" to "Disabled services"
             Renamed "Ignored checks" to "Disabled checks"
    * Sorter Host IP address: fixed sorting, no longer uses str compare on ip
    * Views: New: Draw rule editor icon in multisite views (default off)
             Can be activated in global settings
    * New global multisite options: Default downtime duration and comment
                                    Display current date in dashboard
    * LDAP: Using asynchronous searches / added optional support for paginated
      searches (Can be enabled in connection settings)
    * Added option to enable browser scrollbar to the multisite sidebar (only
      via "sidebar_show_scrollbar = True" in multisite.mk 

    WATO: