@@ -44,6 +44,8 @@
     * esx_vsphere_object: make check state configurable
     * mk_logwatch: support continuation lines with 'A'. Please refer to docu.
     * mk_oracle: Added plugin for solaris
+    * win_netstat: New check for Windows for checking the existance of a UDP/TCP
+        connection or listener
 
     Notifications:
     * notify.py: Matching service level: Use the hosts service level if a
